--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -45,6 +45,13 @@ jobs:
         id: tests
         run: hatch run cov
 
+      - name: Send event to Datadog for nightly failures
+        if: failure() && github.event_name == 'schedule' && steps.tests.conclusion == 'failure'
+        uses: ./.github/actions/send_failure
+        with:
+          title: "core-integrations failure: ${{ github.workflow }}"
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}        
+
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
         id: nightly-haystack-main
@@ -52,15 +59,9 @@ jobs:
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
       
-      - name: Send event to Datadog for failures
-        if: failure() && github.event_name == 'schedule' (steps.tests.conclusion == 'failure' || steps.nightly-haystack-main.conclusion == 'failure')
+      - name: Send event to Datadog for nightly failures using Haystack main branch
+        if: failure() && github.event_name == 'schedule' && steps.nightly-haystack-main.conclusion == 'failure'
         uses: ./.github/actions/send_failure
         with:
-          title: |
-            ${{ if steps.nightly-tests.conclusion == 'failure' }}
-            core-integrations nightly failure with Haystack main branch
-            ${{ else }}
-            core-integrations nightly failure
-            ${{ endif }}
-            : ${{ github.workflow }}
+          title: "core-integrations failure using Haystack main branch: ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
