update all integrations

--- a/.github/workflows/elasticsearch.yml
+++ b/.github/workflows/elasticsearch.yml
@@ -55,11 +55,26 @@ jobs:
         run: hatch run docs
 
       - name: Run tests
+        id: tests
         run: hatch run cov
 
       - name: Send event to Datadog for nightly failures
-        if: github.event_name == 'schedule' && failure()
+        if: failure() && github.event_name == 'schedule' && steps.tests.conclusion == 'failure'
         uses: ./.github/actions/send_failure
         with:
-          title: "core-integrations nightly failure: ${{ github.workflow }}"
+          title: "core-integrations failure: ${{ github.workflow }}"
+          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}        
+
+      - name: Nightly - run unit tests with Haystack main branch
+        if: github.event_name == 'schedule'
+        id: nightly-haystack-main
+        run: |
+          hatch run pip install git+https://github.com/deepset-ai/haystack.git
+          hatch run test -m "not integration"
+      
+      - name: Send event to Datadog for nightly failures using Haystack main branch
+        if: failure() && github.event_name == 'schedule' && steps.nightly-haystack-main.conclusion == 'failure'
+        uses: ./.github/actions/send_failure
+        with:
+          title: "core-integrations failure using Haystack main branch: ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
