--- a/.github/workflows/cohere.yml
+++ b/.github/workflows/cohere.yml
@@ -53,6 +53,10 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run lint:all
 
+      - name: Generate docs
+        if: matrix.python-version == '3.9' && runner.os == 'Linux'
+        run: hatch run docs        
+
       - name: Run tests
         id: tests
         run: hatch run cov
