--- a/.github/workflows/qdrant.yml
+++ b/.github/workflows/qdrant.yml
@@ -60,13 +60,6 @@ jobs:
         id: tests
         run: hatch run cov
 
-      - name: Send event to Datadog for nightly failures
-        if: failure() && github.event_name == 'schedule' && steps.tests.conclusion == 'failure'
-        uses: ./.github/actions/send_failure
-        with:
-          title: "core-integrations failure: ${{ github.workflow }}"
-          api-key: ${{ secrets.CORE_DATADOG_API_KEY }}        
-
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
         id: nightly-haystack-main
@@ -74,9 +67,14 @@ jobs:
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
       
-      - name: Send event to Datadog for nightly failures using Haystack main branch
-        if: failure() && github.event_name == 'schedule' && steps.nightly-haystack-main.conclusion == 'failure'
+      - name: Send event to Datadog for nightly failures
+        if: |
+          failure() && github.event_name == 'schedule' && 
+          (steps.nightly-haystack-main.conclusion == 'failure' || steps.tests.conclusion == 'failure')
         uses: ./.github/actions/send_failure
         with:
-          title: "core-integrations failure using Haystack main branch: ${{ github.workflow }}"
+          title: |
+            "core-integrations failure: 
+            ${{ steps.tests.conclusion == 'failure' ? 'tests' : 'nightly-haystack-main' }} - 
+            ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
