--- a/.github/workflows/unstructured.yml
+++ b/.github/workflows/unstructured.yml
@@ -87,6 +87,6 @@ jobs:
         with:
           title: |
             "core-integrations failure: 
-            ${{ steps.tests.conclusion == 'failure' ? 'tests' : 'nightly-haystack-main' }} - 
-            ${{ github.workflow }}"
+            ${{ if(steps.tests.conclusion == 'failure') }} tests ${{ else }} nightly-haystack-main
+            - ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
