try a better workflow

--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -82,10 +82,9 @@ jobs:
         if: |
           failure() && github.event_name == 'schedule' && 
           (steps.nightly-haystack-main.conclusion == 'failure' || steps.tests.conclusion == 'failure')
+        env: 
+          FAILED_STEP: ${{ if(steps.tests.conclusion == 'failure') }} tests ${{ else }} nightly-haystack-main
         uses: ./.github/actions/send_failure
         with:
-          title: |
-            "core-integrations failure: 
-            ${{ if(steps.tests.conclusion == 'failure') }} tests ${{ else }} nightly-haystack-main
-            - ${{ github.workflow }}"
+          title: "core-integrations failure: ${{ env.FAILED_STEP }} - ${{ github.workflow }}"
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
