--- a/.github/workflows/gradient.yml
+++ b/.github/workflows/gradient.yml
@@ -74,7 +74,6 @@ jobs:
       uses: ./.github/actions/send_failure
       with:
         title: |
-          "core-integrations failure: 
-          ${{ steps.tests.conclusion == 'failure' ? 'tests' : 'nightly-haystack-main' }} - 
-          ${{ github.workflow }}"
+          core-integrations failure: ${{ (steps.tests.conclusion == 'failure') && 'test' || 'nightly-haystack-main' }}
+            - ${{ github.workflow }}
         api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
