change google ai concurrency group for tests

--- a/.github/workflows/google_ai.yml
+++ b/.github/workflows/google_ai.yml
@@ -15,7 +15,7 @@ defaults:
     working-directory: integrations/google_ai
 
 concurrency:
-  group: google-vertex-${{ github.head_ref }}
+  group: google-ai-${{ github.head_ref }}
   cancel-in-progress: true
 
 env:
