try testing with Haystack main branch

--- a/.github/workflows/fastembed.yml
+++ b/.github/workflows/fastembed.yml
@@ -42,4 +42,6 @@ jobs:
         run: hatch run docs          
 
       - name: Run tests
-        run: hatch run cov
+        run: |
+          hatch run pip install git+https://github.com/deepset-ai/haystack.git #TODO: rm before merging
+          hatch run cov
