--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-"haystack-ai>=2.1.0",
+"haystack-ai",
 "fastembed>=0.2.4",
 ]
 
