--- a/.github/workflows/astra.yml
+++ b/.github/workflows/astra.yml
@@ -59,8 +59,8 @@ jobs:
 
     - name: Run tests
       env:
-        ASTRA_DB_API_ENDPOINT: ${{ secrets.ASTRA_API_ENDPOINT }}
-        ASTRA_DB_APPLICATION_TOKEN: ${{ secrets.ASTRA_TOKEN }}
+        ASTRA_DB_API_ENDPOINT: ${{ secrets.ASTRA_DB_API_ENDPOINT }}
+        ASTRA_DB_APPLICATION_TOKEN: ${{ secrets.ASTRA_DB_APPLICATION_TOKEN }}
       id: tests
       run: hatch run cov
 
@@ -70,13 +70,13 @@ jobs:
       run: |
         hatch run pip install git+https://github.com/deepset-ai/haystack.git
         hatch run test -m "not integration"
-    
+
     - name: Send event to Datadog for nightly failures
       if: failure() && github.event_name == 'schedule'
       uses: ./.github/actions/send_failure
       with:
         title: |
-          core-integrations failure: 
+          core-integrations failure:
           ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
             - ${{ github.workflow }}
         api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
