--- a/integrations/langfuse/pyproject.toml
+++ b/integrations/langfuse/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -38,8 +38,11 @@ Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/int
 packages = ["src/haystack_integrations"]
 
 [tool.hatch.version]
-source = "vcs"
-tag-pattern = 'integrations\/langfuse-v(?P<version>.*)'
+# Remove the following line and uncomment the others to enable git versioning
+path = "src/haystack_integrations/components/others/langfuse/__about__.py"
+# source = "vcs"
+# tag-pattern = 'integrations\/langfuse-v(?P<version>.*)'
+
 
 [tool.hatch.version.raw-options]
 root = "../.."
