--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-"haystack-ai",
+"haystack-ai>=2.0.1",
 "fastembed>=0.2.5",
 ]
 
