feat(FastEmbed): Support for SPLADE Sparse Embedder (#579)
* fix(opensearch): bulk error without create key

* feat(FastEmbed): Scaffold for SPLADE Sparse Embedding Support

* Revert "fix(opensearch): bulk error without create key"

This reverts commit afc8e791f9f5b1f3b2c1484dc6ee6ff4493faafb.

* feat(FastEmbed): __all__ fix

* feat(FastEmbed): fix one test

* feat(FastEmbed): fix one test

* feat(FastEmbed): fix a second test

* feat(FastEmbed): removed old TODO (fixed)

* feat(FastEmbed): fixing all test + doc

* fix output typing

* Fix output component

* feat(FastEmbed): renaming SPLADE to Sparse because it makes more sense

* feat(FastEmbed): hatch run all lint

* feat(FastEmbed): modify PR for haystack 2.1.0 with proper sparse vectors

* try testing with Haystack main branch

* update model name

* Update integrations/fastembed/src/haystack_integrations/components/embedders/fastembed/fastembed_sparse_document_embedder.py

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* Update integrations/fastembed/src/haystack_integrations/components/embedders/fastembed/fastembed_sparse_document_embedder.py

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* Update integrations/fastembed/src/haystack_integrations/components/embedders/fastembed/fastembed_sparse_document_embedder.py

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* Update integrations/fastembed/src/haystack_integrations/components/embedders/fastembed/fastembed_sparse_document_embedder.py

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* Update integrations/fastembed/src/haystack_integrations/components/embedders/fastembed/fastembed_sparse_text_embedder.py

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

* feat(FastEmbed): remove prefix/suffix

* feat(FastEmbed): fix linting

* feat(FastEmbed): suggestion for progress bar

* feat(FastEmbed): return Haystack's SparseEmbedding inste

--- a/integrations/fastembed/pyproject.toml
+++ b/integrations/fastembed/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-"haystack-ai",
-"fastembed>=0.2",
+"haystack-ai>=2.0.1",
+"fastembed>=0.2.5",
 ]
 
 [project.urls]
@@ -155,7 +155,7 @@ ban-relative-imports = "parents"
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 # examples can contain "print" commands
-"examples/**/*" = ["T201"]
+"examples/**/*" = ["T201", "E501"]
 
 [tool.coverage.run]
 source = ["haystack_integrations"]
