--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/about-codeowners/ for syntax
 
-# Core Engineering will be the default owners for everything
+# Open Source Engineering will be the default owners for everything
 # in the repo. Unless a later match takes precedence,
-# @deepset-ai/core-engineering will be requested for review
+# @deepset-ai/open-source-engineering will be requested for review
 # when someone opens a pull request.
-*            @deepset-ai/core-engineering
+*                       @deepset-ai/open-source-engineering
