--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -26,6 +26,7 @@ env:
   PYTHONUNBUFFERED: "1"
   FORCE_COLOR: "1"
   AWS_REGION: us-east-1
+  HF_TOKEN: ${{ secrets.HF_TOKEN }}
 
 jobs:
   run:
@@ -70,20 +71,20 @@ jobs:
       - name: Run tests
         id: tests
         run: hatch run cov
-    
+
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
         id: nightly-haystack-main
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
-     
+
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
         uses: ./.github/actions/send_failure
         with:
           title: |
-            core-integrations failure: 
+            core-integrations failure:
             ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
              - ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
