--- a/integrations/jina/pyproject.toml
+++ b/integrations/jina/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
   { name = "Joan Fontanals Martinez", email = "joan.fontanals.martinez@jina.ai" },
 ]
 classifiers = [
+  "License :: OSI Approved :: Apache Software License",
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.8",
