Add haystack-pydoc-tools dep

--- a/integrations/langfuse/pyproject.toml
+++ b/integrations/langfuse/pyproject.toml
@@ -52,6 +52,7 @@ git_describe_command = 'git describe --tags --match="integrations/langfuse-v[0-9
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
+  "haystack-pydoc-tools",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
