Use OPENAI_API_KEY secret

--- a/.github/workflows/langfuse.yml
+++ b/.github/workflows/langfuse.yml
@@ -23,6 +23,7 @@ env:
   FORCE_COLOR: "1"
   LANGFUSE_SECRET_KEY: ${{ secrets.LANGFUSE_SECRET_KEY }}
   LANGFUSE_PUBLIC_KEY: ${{ secrets.LANGFUSE_PUBLIC_KEY }}
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 jobs:
   run:
