--- a/integrations/amazon_sagemaker/pydoc/config.yml
+++ b/integrations/amazon_sagemaker/pydoc/config.yml
@@ -14,7 +14,7 @@ processors:
   - type: smart
   - type: crossref
 renderer:
-  type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
+  type: haystack_pydoc_tools.renderers.ReadmeIntegrationRenderer
   excerpt: Amazon Sagemaker integration for Haystack
   category_slug: integrations-api
   title: Amazon Sagemaker
