--- a/integrations/langfuse/pydoc/config.yml
+++ b/integrations/langfuse/pydoc/config.yml
@@ -15,7 +15,7 @@ processors:
   - type: smart
   - type: crossref
 renderer:
-  type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
+  type: haystack_pydoc_tools.renderers.ReadmeIntegrationRenderer
   excerpt: Langfuse integration for Haystack
   category_slug: integrations-api
   title: langfuse
