--- a/integrations/pinecone/pydoc/config.yml
+++ b/integrations/pinecone/pydoc/config.yml
@@ -16,7 +16,7 @@ processors:
   - type: smart
   - type: crossref
 renderer:
-  type: haystack_pydoc_tools.renderers.ReadmePreviewRenderer
+  type: haystack_pydoc_tools.renderers.ReadmeIntegrationRenderer
   excerpt: Pinecone integration for Haystack
   category_slug: integrations-api
   title: Pinecone
