support for function calling through functionary
also add a basic rag test

--- a/integrations/llama_cpp/pyproject.toml
+++ b/integrations/llama_cpp/pyproject.toml
@@ -28,7 +28,10 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "llama-cpp-python"
+  "llama-cpp-python",
+  "transformers",
+  "sentencepiece",
+  "protobuf"
 ]
 
 [project.urls]
