basic implementation of llama.cpp chat generation (#723)
* basic implementation of llama.cpp chat generation

allows for constraining to json

allows for function calling (not tested)

streaming needs to be implemented when stream is set to true in generation_kwargs

* add testing

* remove unnecessary function

* slight documentation fix, comment out broken test

* support for function calling through functionary

also add a basic rag test

* add function calling and execute test, it works!

* add json test, add chatml test

* make function call and execute more deterministic

* try removing additional deps

* revert

* make transformers a tests-only dependency

---------

Co-authored-by: Stefano Fiorucci <stefanofiorucci@gmail.com>

--- a/integrations/llama_cpp/pyproject.toml
+++ b/integrations/llama_cpp/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     "coverage[toml]>=6.5",
     "pytest",
     "haystack-pydoc-tools",
+    "transformers[sentencepiece]"
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
