restore GITHUB_TOKEN

--- a/.github/workflows/CI_pypi_release.yml
+++ b/.github/workflows/CI_pypi_release.yml
@@ -54,6 +54,8 @@ jobs:
 
       - name: Commit changelog
         shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.HAYSTACK_BOT_TOKEN }}
         run: |
           git config --global user.name "HaystackBot"
           git config --global user.email "accounts@deepset.ai"
