introduce EndBug/add-and-commit

--- a/.github/workflows/CI_pypi_release.yml
+++ b/.github/workflows/CI_pypi_release.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.HAYSTACK_BOT_TOKEN }}
 
       - name: Install Hatch
         run: pip install hatch
@@ -53,14 +55,9 @@ jobs:
             -o "${{ steps.pathfinder.outputs.project_path }}/CHANGELOG.md"
 
       - name: Commit changelog
-        shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.HAYSTACK_BOT_TOKEN }}
-        run: |
-          git config --global user.name "HaystackBot"
-          git config --global user.email "accounts@deepset.ai"
-          git fetch
-          git checkout main
-          git add ${{ steps.pathfinder.outputs.project_path }}
-          git commit -m"Update the changelog"
-          git push origin main
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: "HaystackBot"
+          author_email: "accounts@deepset.ai"
+          message: "Update the changelog"
+          add: ${{ steps.pathfinder.outputs.project_path }}
