fix typing checks

--- a/integrations/astra/pyproject.toml
+++ b/integrations/astra/pyproject.toml
@@ -187,6 +187,7 @@ module = [
   "pydantic.*",
   "haystack.*",
   "haystack_integrations.*",
-  "pytest.*"
+  "pytest.*",
+  "openpyxl.*",
 ]
 ignore_missing_imports = true
